Chapter05/kubia-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
  - hosts: 
    - kubia.example.com
    secretName: tls-secret
  rules:
  - host: "kubia.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/kubia"
        backend:
          service:
            name: kubia-loadbalancer
            port: 
              number: 80
      - pathType: Prefix
        path: /kubia2
        backend:
          service:
            name: kubia-loadbalancer2
            port: 
              number: 80
