Chapter05/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: "kubia.example.com"
    http:
      paths:
      - pathType: Prefix
      path: "/kubia"
        backend:
          service:
            name: kubia-loadbalancer
            port: 
              number: 80
      - path: /kubia2
        backend:
          service:
            name: kubia-loadbalancerㄉ
            port: 
              number: 80
